reading words as longs